# simply-kaspa-acceptance-tool

./: Cargo.toml  README.md
.github/workflows/: docker.yml
cli/: Cargo.toml
cli/src/: cli_args.rs
database/: Cargo.toml
database/src/: client.rs
database/src/models/: mod.rs
database/src/query/: insert.rs  select.rs
docker/: Dockerfile  build.sh
indexer/: Cargo.toml
indexer/src/: lib.rs  main.rs
indexer/src/virtual_chain/: accept_transactions.rs  mod.rs  process_virtual_chain.rs
kaspad/: Cargo.toml
