[workspace]
resolver = "2"
members = [
    "cli",
    "database",
    "kaspad",
    "indexer"
]

[profile.dev]
panic = "abort"

[profile.release]
lto = "thin"
strip = true
overflow-checks = true
panic = "abort"

[workspace.package]
rust-version = "1.83.0"
authors = ["suprtypo@pm.me"]
license-file = "LICENSE"
edition = "2021" # Rust edition

[workspace.dependencies]
simply-kaspa-acceptance-tool-cli = { path = "cli" }
simply-kaspa-acceptance-tool-database = { path = "database" }
simply-kaspa-acceptance-tool-kaspad = { path = "kaspad" }
kaspa-wrpc-client = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v0.16.0" }
kaspa-rpc-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v0.16.0" }
kaspa-hashes = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v0.16.0" }
tokio = { version = "1.43.0", features = ["default", "signal"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "runtime-tokio-native-tls", "postgres"] }
deadpool = { version = "0.12.2", features = ["managed", "rt_tokio_1"] }
itertools = "0.14.0"
chrono = { version = "0.4.39", features = ["std", "serde"] }
regex = "1.11.1"
workflow-core = "0.18.0"
env_logger = "0.11.6"
log = "0.4.25"
vergen-git2 = "1.0.5"
clap = { version = "4.5.27", features = ["cargo", "derive"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_with = { version = "3.12.0", features = ["hex", "macros"] }
serde_json = "1.0.138"
