[package]
name = "simply-kaspa-acceptance-tool-kaspad"
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
edition.workspace = true

[features]
default = []

[lib]
name = "simply_kaspa_acceptance_tool_kaspad"
crate-type = ["cdylib", "lib"]

[dependencies]
kaspa-wrpc-client.workspace = true
kaspa-rpc-core.workspace = true
tokio.workspace = true
deadpool.workspace = true
futures.workspace = true
workflow-core.workspace = true
log.workspace = true
